--- a/back/package.json
+++ b/back/package.json
@@ -3,11 +3,12 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
-    "cookie-parser": "^1.4.4",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1"
   },
   "scripts": {
